--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self Introduction</title>
 </head>
 <body>
-<h1 style="text-align: center;font-family: 等线;">Self Introduction</h1>
 <!-- main body -->
     <div class="header">
         <h1>Self Introduction</h1>
