--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div class="card">
                 <h2>TITLE HEADING</h2>
                 <div class="fakeimg" style="height:100%;"><img src="asset/selfie.jpg" alt="selfie" width="100%" height="100%" border="0"></div>
-                <p align="center">This is Anders, a 19-year-old sophomore computer student who likes IT. His idol is Cai Xukun. </p>
-                <p align="center">At the same time, Anders' favorite song is Just Because You Are Too Beautiful.</p> 
+                <p align="center">This is Anders, a web designer responsible for various web design and development activities. </p>
+                <p align="center">At the same time, I am good at using html, css, and js to complete my designs.</p> 
                 <p align="center">My career goal is to become an excellent developer.</p>
                 </div>
             <div class="card">
