new file:   asset/1.png 	new file:   asset/10.png 	new file:   asset/2.jpg 	new file:   asset/3.png 	new file:   asset/4.jpg 	new file:   asset/5.jpg 	new file:   asset/6.png 	new file:   asset/7.png 	new file:   asset/8.png 	new file:   asset/9.png 	new file:   asset/flowChart2.png 	modified:   boardAndChart.html 	modified:   gallery.html

--- a/boardAndChart.html
+++ b/boardAndChart.html
@@ -29,6 +29,10 @@
             <h2>Flow Chart</h2>
             <div class="fakeimg" style="height:100%;" align="center"><img src="asset/flowChart.png" alt="flowChart" border="0" width="850px" height="480px"></div>
         </div>
+        <div class="card">
+            <h2>Flow Chart2</h2>
+            <div class="fakeimg" style="height:100%;" align="center"><img src="asset/flowChart2.png" alt="flowChart" border="0" width="850px" height="480px"></div>
+        </div>
 
     </div>
 
