modified:   README.md 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="leftcolumn">
             <div class="card">
                 <h2>TITLE HEADING</h2>
-                <div class="fakeimg" style="height:100%;"><img src="asset/selfie.jpg" alt="selfie" width="100%" height="100%" border="0"></div>
+                <div class="fakeimg" style="height:100%;" align="center"><img src="asset/selfie.jpg" alt="selfie" width="50%" height="50%" border="0"></div>
                 <p align="center">This is Anders, a web designer responsible for various web design and development activities. </p>
                 <p align="center">At the same time, I am good at using html, css, and js to complete my designs.</p> 
                 <p align="center">My career goal is to become an excellent developer.</p>
