--- a/boardAndChart.html
+++ b/boardAndChart.html
@@ -27,14 +27,21 @@
         </div>
         <div class="card">
             <h2>Flow Chart</h2>
-            <div class="fakeimg" style="height:100%;" align="center"><img src="asset/flowChart.png" alt="flowChart" border="0" width="850px" height="480px"></div>
+            <div class="fakeimg" style="height:100%;" align="center"><img src="asset/flowChart.png" alt="flowChart" border="0" width="100%" height="480px"></div>
         </div>
         <div class="card">
             <h2>Flow Chart2</h2>
-            <div class="fakeimg" style="height:100%;" align="center"><img src="asset/flowChart2.png" alt="flowChart" border="0" width="850px" height="480px"></div>
+            <div class="fakeimg" style="height:100%;" align="center"><img src="asset/flowChart2.png" alt="flowChart" border="0" width="100%" height="480px"></div>
         </div>
 
     </div>
+    
+    <div class="rightcolumn">
+        <div class="card"><p style="font-size: 32px;">
+            Proficient in business design, able to conduct reasonable structural design and development,
+             convey your meaning in the clearest way, and focus on expanding accessibility.</p></div>
+    </div>
+    
 
     <div class="row">
 
