modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>Hobbies</h2>
                 <!-- Unordered list -->
                 <ul align="center" style="list-style: none;">
-                    <li>①Eat delicious food</li>
+                    <li>①go out with girlfriend</li>
                     <li>②Coding</li>
                     <li>③Play games with friends</li>
                     <li>④Watch science fiction movies</li>
@@ -43,7 +43,7 @@
                 <!-- table -->
                 <table border="1" align="center" style="text-align: center;">
                     <tr>
-                        <td>delicious food</td>
+                        <td>go out</td>
                         <td>⭐</td>
                         <td>⭐</td>
                         <td>⭐</td>
