modified:   boardAndChart.html 	modified:   css/layout.css 	modified:   gallery.html 	modified:   index.html

--- a/gallery.html
+++ b/gallery.html
@@ -15,12 +15,13 @@
         <p>Share some personal work displays.</p>
     </div>
 
-    <div class="topnav">
-      <a href="index.html">Click here - Self Introduction</a>
-      <a href="gallery.html">Click here - Gallery</a>
-      <a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a>
-      <a href="#" style="float:right">Navigation</a>
-    </div>
+    <nav>
+      <ul>
+          <li><a href="index.html" >Click here - Self Introduction</a></li>
+          <li><a href="gallery.html">Click here - Gallery</a></li>
+          <li><a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a></li>
+      </ul>
+  </nav>
 
   <div>
       <div class="gallery">
