--- a/index.html
+++ b/index.html
@@ -14,13 +14,22 @@
         <p>Anders</p>
         <img src="asset/logo.png" alt="selfie" width="167px" height="60px" border="0">
     </div>
-  
+<!-- main body 
     <div class="topnav">
-        <a href="index.html">Click here - Self Introduction</a>
+        <a href="index.html" >Click here - Self Introduction</a>
         <a href="gallery.html">Click here - Gallery</a>
         <a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a>
-        <a href="#" style="float:right">Navigation</a>
+
     </div>
+-->
+    <nav>
+        <ul>
+            <li><a href="index.html" >Click here - Self Introduction</a></li>
+            <li><a href="gallery.html">Click here - Gallery</a></li>
+            <li><a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a></li>
+        </ul>
+    </nav>
+    
 
     <div class="row">
         <div class="leftcolumn">
