--- a/boardAndChart.html
+++ b/boardAndChart.html
@@ -13,12 +13,13 @@
       <h1>Storyboard And Flow Chart</h1>
     </div>
     
-    <div class="topnav">
-        <a href="index.html">Click here - Self Introduction</a>
-        <a href="gallery.html">Click here - Gallery</a>
-        <a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a>
-        <a href="#" style="float:right">Navigation</a>
-    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html" >Click here - Self Introduction</a></li>
+            <li><a href="gallery.html">Click here - Gallery</a></li>
+            <li><a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a></li>
+        </ul>
+    </nav>
 
     <div class="leftcolumn">
         <div class="card">
