modified:   boardAndChart.html 	modified:   css/layout.css 	modified:   gallery.html 	modified:   index.html

--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
 
     <nav>
       <ul>
-          <li><a href="index.html" >Click here - Self Introduction</a></li>
-          <li><a href="gallery.html">Click here - Gallery</a></li>
-          <li><a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a></li>
+          <li><a href="index.html" >Self Introduction</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="boardAndChart.html">Storyboard and Flow Chart</a></li>
       </ul>
   </nav>
 
@@ -177,7 +177,7 @@
     </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> </br> 
 
     <div class="footer">
-        <h2>You have already browsed to the end, and can't really see any more!</h2>
+        <h2>©2023 Anders. All Rights Reserved.Contact with me：2584036741@qq.com.</h2>
     </div>
 </body>
 </html>
