--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 -->
     <nav>
         <ul>
-            <li><a href="index.html" >Click here - Self Introduction</a></li>
-            <li><a href="gallery.html">Click here - Gallery</a></li>
-            <li><a href="boardAndChart.html">Click here - Storyboard and Flow Chart</a></li>
+            <li><a href="index.html" >Self Introduction</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="boardAndChart.html">Storyboard and Flow Chart</a></li>
         </ul>
     </nav>
     
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="leftcolumn">
             <div class="card">
-                <h2>TITLE HEADING</h2>
+                <h2>INTRODUCE</h2>
                 <div class="fakeimg" style="height:100%;" align="center"><img src="asset/selfie.jpg" alt="selfie" width="50%" height="50%" border="0"></div>
                 <p align="center">This is Anders, a web designer responsible for various web design and development activities. </p>
                 <p align="center">At the same time, I am good at using html, css, and js to complete my designs.</p> 
@@ -78,12 +78,22 @@
                 </table>
             </div>
         </div>
+
+        <div class="rightcolumn">
+            <div class="card"><p style="font-size: 32px;">
+                Proficient in business design, able to conduct reasonable structural design and development,
+                 convey your meaning in the clearest way, and focus on expanding accessibility.</p></div>
+        </div>
+        <div class="rightcolumn">
+            <div class="card"><p style="font-size: 32px;">
+                I will showcase my skills in the Pictures gallery on the second page.</p></div>
+        </div>
     </div>
 </div>
 
     <!-- footer -->
     <div class="footer">
-        <h2>You have already browsed to the end, and can't really see any more!</h2>
+        <h2>©2023 Anders. All Rights Reserved.Contact with me：2584036741@qq.com.</h2>
     </div>
 
 </body>
